tests/types/errors/assign_dict_value_str_to_bool.mog
var flags Dict<str, bool> = {"ready": "yes"};
